--- a/introduction (1).ipynb
+++ b/introduction (1).ipynb
@@ -707,12 +707,140 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Everlyne would you like to learn interesting sections of python today\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_name = \"Everlyne\"\n",
+    "second_name = \"Jacky\"\n",
+    "message2 = f\"Hello {first_name} would you like to learn interesting sections of python today\"\n",
+    "message = f\"Hello {first_name} would you like to learn interesting sections of python today\"\n",
+    "print(message)\n",
+    "print(message2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Jacky would you like to learn interesting sections of python today\n"
+     ]
+    }
+   ],
+   "source": [
+    "second_name = \"Jacky\"\n",
+    "message2 = f\"Hello {second_name} would you like to learn interesting sections of python today\"\n",
+    "print(message2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "JACKSON KULOBA\n",
+      "jackson kuloba\n",
+      "Jackson Kuloba\n"
+     ]
+    }
+   ],
+   "source": [
+    "persons_name = \"Jackson kuloba\"\n",
+    "print(persons_name.upper())\n",
+    "print(persons_name.lower())\n",
+    "print(persons_name.title())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jackson , 'Haraka haraka haina baraka' \n"
+     ]
+    }
+   ],
+   "source": [
+    "message3 = \"Haraka haraka haina baraka\"\n",
+    "print(f\"Jackson , 'Haraka haraka haina baraka' \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the dataset has:\n",
+      " \t * 25 rows.\n",
+      " \t * 2 columns.\n"
+     ]
+    }
+   ],
+   "source": [
+    "output = \"the dataset has:\\n \\t * 25 rows.\\n \\t * 2 columns.\"\n",
+    "print(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# code goes here "
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
