--- a/introduction (1).ipynb
+++ b/introduction (1).ipynb
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 35,
    "metadata": {
     "tags": []
    },
@@ -783,13 +783,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Jackson , 'Haraka haraka haina baraka' \n"
+      "Jackson alisema, \"Haraka haraka haina baraka\" \n"
      ]
     }
    ],
    "source": [
     "message3 = \"Haraka haraka haina baraka\"\n",
-    "print(f\"Jackson , 'Haraka haraka haina baraka' \")"
+    "print(f\"Jackson alisema, \\\"Haraka haraka haina baraka\\\" \")"
    ]
   },
   {
