--- a/introduction (1).ipynb
+++ b/introduction (1).ipynb
@@ -816,10 +816,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "James\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_name = \"James\"\n",
+    "print(first_name)"
+   ]
   },
   {
    "cell_type": "code",
